---
source: compiler/lume_hir/src/lower/tests.rs
description: "impl Foo {\n        pub fn bar(a: Int32, self) -> void { }\n    }"
---
SelfNotFirstParameter {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "impl Foo {\n        pub fn bar(a: Int32, self) -> void { }\n    }",
        package: PackageId(
            0,
        ),
    },
    range: 40..44,
    ty: "self",
}
